# python-clang

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  llvm_version.cmake  make-from-packages.py  packages.lst  pyproject.toml  requirements.txt  setup.py  setup.py.tpl  tox.ini  update.sh
.github/: dependabot.yml
.github/workflows/: llvm-update-autocheck.yml  release.yml
clang/: cindex.py
tests/cindex/: test_access_specifiers.py  test_cdb.py  test_code_completion.py  test_comment.py  test_cursor.py  test_cursor_kind.py  test_diagnostics.py  test_file.py  test_index.py  test_location.py  test_token_kind.py  test_tokens.py  test_translation_unit.py  test_type.py  util.py
