[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "clang"
description = "libclang python bindings"
readme = "README.md"
license = { text = "Apache-2.0 with LLVM exception" }
authors = [
    { name = "LLVM team - pypi upload by Loic Jaquemet" }
]
keywords = ["llvm", "clang", "libclang"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.urls]
Homepage = "http://clang.llvm.org/"
Download = "http://llvm.org/releases/download.html"

[dependecy-groups]
dev = ["build", "twine"]

[tool.scikit-build]
wheel.py-api = "py3"
wheel.platlib = false
wheel.license-files = []

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "llvm_version.cmake"
regex = '''(?sx)
set\(\s*LLVM_VERSION\s+(?P<version>\d+(?:\.\d+)+)\s*\)
'''
result = "{version}"